<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailsForm">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/livingSituation" />

                <RadioButton
                    android:id="@+id/radioHouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioHouse" />

                <RadioButton
                    android:id="@+id/radioApartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioApartment" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/checkBoxPets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkboxPets" />

            <Switch
                android:id="@+id/switchAlone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switchAlone" />

            <Button
                android:id="@+id/submitUserDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    </LinearLayout>

</FrameLayout>